css alignment fix

--- a/src/wedding/wedding/static/css/landing_page.css
+++ b/src/wedding/wedding/static/css/landing_page.css
@@ -2,4 +2,5 @@
   font-family: 'Tangerine', cursive;
   font-size: 5em;
   min-height: 80vh;
+  justify-content: center;
 }
